ResetMldpDatabase improvements; AbbreviationHandler now has flag to skip review computation